dataset1235/2025-2/2947369575/users/1530961528/executions/1003782500_3921830315.log
== SUBMISSION (2025-09-01 20:53:00)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2,86
total_sem_icms = gasolina + 50
total_sem_icms = total_sem_icms * 1,34

print(round(total_sem_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 20:52:06)
-- CODE: 
qtde_litros = float(input))

gasolina = qtde_litros * 2,86
total_sem_icms = gasolina + 50
total_sem_icms = total_sem_icms * 1,34

print(round(total_sem_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 20:53:32)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_sem_icms = total_sem_icms * 1.34

print(round(total_sem_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 20:53:35)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2.86
total_sem_icms = gasolina + 50
total_sem_icms = total_sem_icms * 1.34

print(round(total_sem_icms, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 20:53:02)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2,86
total_sem_icms = gasolina + 50
total_sem_icms = total_sem_icms * 1,34

print(round(total_sem_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 20:53:04)
-- CODE: 
qtde_litros = float(input())

gasolina = qtde_litros * 2,86
total_sem_icms = gasolina + 50
total_sem_icms = total_sem_icms * 1,34

print(round(total_sem_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total_sem_icms = gasolina + 50
                     ~~~~~~~~~^~~~
TypeError: can only concatenate tuple (not "int") to tuple
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 20:52:03)
-- CODE: 
qtde_litros = float(input))

gasolina = qtde_litros * 2,86
total_sem_icms = gasolina + 50
total_sem_icms = total_sem_icms * 1,34

print(round(total_sem_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 1
    qtde_litros = float(input))
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
